--- a/index.html
+++ b/index.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="utils.css">
 </head>
 <body>
-    </nav>
+    <div class="container mx-auto bg-red">
+        <header></header>
+        <main class="min-h-screen "></main>
+        <footer></footer>
+    </div>
 </body>
 </html>
