--- a/index.html
+++ b/index.html
@@ -5,13 +5,45 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="utils.css">
+    <link rel="stylesheet" href="swiper-bundle.min.css">
+    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.8/css/line.css">
 </head>
 <body>
-    <div class="container mx-auto bg-red">
-        <header></header>
-        <main class="min-h-screen "></main>
-        <footer></footer>
-    </div>
+    <header>
+        <div class="nav-bar">
+            <a href="" class="logo">Logo</a>
+                <div class="navigation">
+                    <div class="nav-items">
+                        <i class="uil uil-times nav-close-btn"></i>
+                        <a href="#"><i class="uil uil-home"></i>Home</a>
+                        <a href="#"><i class="uil uil-list-ul"></i>Form</a>
+                        <a href="#"><i class="uil uil-presentation-lines-alt"></i>Leader Board</a>
+                        <a href="#"><i class="uil uil-cloud-info"></i>About</a>
+                        <a href="#"><i class="uil uil-at"></i>Contact Us</a>
+                    </div>
+                </div>
+                <i class="uil uil-apps nav-menu-btn"></i>
+        </div>
+    </header>
+
+    <section class="home">
+        <div class="swiper bg-slider">
+            <div class="swiper-wrapper">
+              <div class="swiper-slide">
+                <img src="" />
+              </div>
+            </div>
+          </div>
+
+          <div thumbsSlider="" class="bg-slider-thumbs">
+            <div class="swiper-wrapper">
+                <div class="swiper-slide">
+                    <img src="" />
+                </div>
+            </div>
+          </div>
+    </section>
+    <script src="swiper-bundle.min.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
