--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <a href="#">Form</a>
                 <a href="#">Leader Board</a>
                 <a href="#">About</a>
-                <a href="#">Contact US</a>
+                <a href="#">ContactUs</a>
             </div>
             <label for="check">
                 <i class='bx bx-menu menu-btn' ></i>
